[gd_scene load_steps=87 format=2]

[ext_resource path="res://Theme/white_piano_key.tres" type="Theme" id=1]
[ext_resource path="res://Theme/black_piano_key.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Piano/PianoPlay.gd" type="Script" id=3]
[ext_resource path="res://Audios/Keys/A4.wav" type="AudioStream" id=4]
[ext_resource path="res://Audios/Keys/B4.wav" type="AudioStream" id=5]
[ext_resource path="res://Audios/Keys/C4.wav" type="AudioStream" id=6]
[ext_resource path="res://Audios/Keys/D4.wav" type="AudioStream" id=7]
[ext_resource path="res://Audios/Keys/F4.wav" type="AudioStream" id=8]
[ext_resource path="res://Audios/Keys/G4.wav" type="AudioStream" id=9]
[ext_resource path="res://Audios/Keys/E4.wav" type="AudioStream" id=10]
[ext_resource path="res://Audios/Keys/Gb4.wav" type="AudioStream" id=11]
[ext_resource path="res://Audios/Keys/Ab4.wav" type="AudioStream" id=12]
[ext_resource path="res://Audios/Keys/Db4.wav" type="AudioStream" id=13]
[ext_resource path="res://Audios/Keys/Eb4.wav" type="AudioStream" id=14]
[ext_resource path="res://Audios/Keys/Bb4.wav" type="AudioStream" id=15]
[ext_resource path="res://Audios/Keys/C1.wav" type="AudioStream" id=16]
[ext_resource path="res://Audios/Keys/C2.wav" type="AudioStream" id=17]
[ext_resource path="res://Audios/Keys/C3.wav" type="AudioStream" id=18]
[ext_resource path="res://Audios/Keys/C8.wav" type="AudioStream" id=19]
[ext_resource path="res://Audios/Keys/C6.wav" type="AudioStream" id=20]
[ext_resource path="res://Audios/Keys/C7.wav" type="AudioStream" id=21]
[ext_resource path="res://Audios/Keys/D5.wav" type="AudioStream" id=22]
[ext_resource path="res://Audios/Keys/D1.wav" type="AudioStream" id=23]
[ext_resource path="res://Audios/Keys/D6.wav" type="AudioStream" id=24]
[ext_resource path="res://Audios/Keys/D2.wav" type="AudioStream" id=25]
[ext_resource path="res://Audios/Keys/D3.wav" type="AudioStream" id=26]
[ext_resource path="res://Audios/Keys/D7.wav" type="AudioStream" id=27]
[ext_resource path="res://Audios/Keys/E2.wav" type="AudioStream" id=28]
[ext_resource path="res://Audios/Keys/E6.wav" type="AudioStream" id=29]
[ext_resource path="res://Audios/Keys/E1.wav" type="AudioStream" id=30]
[ext_resource path="res://Audios/Keys/E5.wav" type="AudioStream" id=31]
[ext_resource path="res://Audios/Keys/E7.wav" type="AudioStream" id=32]
[ext_resource path="res://Audios/Keys/E3.wav" type="AudioStream" id=33]
[ext_resource path="res://Audios/Keys/F1.wav" type="AudioStream" id=34]
[ext_resource path="res://Audios/Keys/F3.wav" type="AudioStream" id=35]
[ext_resource path="res://Audios/Keys/F2.wav" type="AudioStream" id=36]
[ext_resource path="res://Audios/Keys/F5.wav" type="AudioStream" id=37]
[ext_resource path="res://Audios/Keys/F6.wav" type="AudioStream" id=38]
[ext_resource path="res://Audios/Keys/F7.wav" type="AudioStream" id=39]
[ext_resource path="res://Audios/Keys/G1.wav" type="AudioStream" id=40]
[ext_resource path="res://Audios/Keys/G2.wav" type="AudioStream" id=41]
[ext_resource path="res://Audios/Keys/G3.wav" type="AudioStream" id=42]
[ext_resource path="res://Audios/Keys/G5.wav" type="AudioStream" id=43]
[ext_resource path="res://Audios/Keys/G6.wav" type="AudioStream" id=44]
[ext_resource path="res://Audios/Keys/G7.wav" type="AudioStream" id=45]
[ext_resource path="res://Audios/Keys/A1.wav" type="AudioStream" id=46]
[ext_resource path="res://Audios/Keys/A0.wav" type="AudioStream" id=47]
[ext_resource path="res://Audios/Keys/A2.wav" type="AudioStream" id=48]
[ext_resource path="res://Audios/Keys/A3.wav" type="AudioStream" id=49]
[ext_resource path="res://Audios/Keys/A5.wav" type="AudioStream" id=50]
[ext_resource path="res://Audios/Keys/A6.wav" type="AudioStream" id=51]
[ext_resource path="res://Audios/Keys/A7.wav" type="AudioStream" id=52]
[ext_resource path="res://Audios/Keys/B0.wav" type="AudioStream" id=53]
[ext_resource path="res://Audios/Keys/B2.wav" type="AudioStream" id=54]
[ext_resource path="res://Audios/Keys/B3.wav" type="AudioStream" id=55]
[ext_resource path="res://Audios/Keys/B6.wav" type="AudioStream" id=56]
[ext_resource path="res://Audios/Keys/B7.wav" type="AudioStream" id=57]
[ext_resource path="res://Audios/Keys/B5.wav" type="AudioStream" id=58]
[ext_resource path="res://Audios/Keys/B1.wav" type="AudioStream" id=59]
[ext_resource path="res://Audios/Keys/Bb6.wav" type="AudioStream" id=60]
[ext_resource path="res://Audios/Keys/Bb0.wav" type="AudioStream" id=61]
[ext_resource path="res://Audios/Keys/Bb7.wav" type="AudioStream" id=62]
[ext_resource path="res://Audios/Keys/Bb2.wav" type="AudioStream" id=63]
[ext_resource path="res://Audios/Keys/Bb1.wav" type="AudioStream" id=64]
[ext_resource path="res://Audios/Keys/Bb3.wav" type="AudioStream" id=65]
[ext_resource path="res://Audios/Keys/Bb5.wav" type="AudioStream" id=66]
[ext_resource path="res://Audios/Keys/Eb5.wav" type="AudioStream" id=67]
[ext_resource path="res://Audios/Keys/Eb6.wav" type="AudioStream" id=68]
[ext_resource path="res://Audios/Keys/Eb2.wav" type="AudioStream" id=69]
[ext_resource path="res://Audios/Keys/Eb3.wav" type="AudioStream" id=70]
[ext_resource path="res://Audios/Keys/Eb7.wav" type="AudioStream" id=71]
[ext_resource path="res://Audios/Keys/Eb1.wav" type="AudioStream" id=72]
[ext_resource path="res://Audios/Keys/Gb7.wav" type="AudioStream" id=73]
[ext_resource path="res://Audios/Keys/Gb6.wav" type="AudioStream" id=74]
[ext_resource path="res://Audios/Keys/Gb3.wav" type="AudioStream" id=75]
[ext_resource path="res://Audios/Keys/Gb2.wav" type="AudioStream" id=76]
[ext_resource path="res://Audios/Keys/Gb1.wav" type="AudioStream" id=77]
[ext_resource path="res://Audios/Keys/Gb5.wav" type="AudioStream" id=78]
[ext_resource path="res://Audios/Keys/Ab6.wav" type="AudioStream" id=79]
[ext_resource path="res://Audios/Keys/Ab2.wav" type="AudioStream" id=80]
[ext_resource path="res://Audios/Keys/Ab7.wav" type="AudioStream" id=81]
[ext_resource path="res://Audios/Keys/Ab5.wav" type="AudioStream" id=82]
[ext_resource path="res://Audios/Keys/Ab1.wav" type="AudioStream" id=83]
[ext_resource path="res://Audios/Keys/Ab3.wav" type="AudioStream" id=84]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[node name="Piano" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.3797
margin_top = 1.22052
margin_right = -4.3797
margin_bottom = 1.22046
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Panel" parent="."]
margin_left = -4.0
margin_top = 943.0
margin_right = 738.0
margin_bottom = 1289.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Button" parent="."]
margin_left = 31.0
margin_top = 942.854
margin_right = 126.0
margin_bottom = 1272.85
theme = ExtResource( 1 )
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 16 )
attenuation = 2.0

[node name="Player2" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 17 )
attenuation = 2.0

[node name="Player3" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 18 )
attenuation = 2.0

[node name="Player4" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 6 )
attenuation = 2.0

[node name="Player5" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 6 )
attenuation = 2.0

[node name="Player6" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 20 )
attenuation = 2.0

[node name="Player7" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 21 )
attenuation = 2.0

[node name="Player8" type="AudioStreamPlayer2D" parent="C"]
stream = ExtResource( 19 )
attenuation = 2.0

[node name="D" type="Button" parent="."]
margin_left = 126.0
margin_top = 944.158
margin_right = 221.0
margin_bottom = 1273.16
theme = ExtResource( 1 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 23 )

[node name="Player2" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 25 )

[node name="Player3" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 26 )

[node name="Player4" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 7 )

[node name="Player5" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 22 )

[node name="Player6" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 24 )

[node name="Player7" type="AudioStreamPlayer2D" parent="D"]
position = Vector2( -79.8014, -1.146 )
stream = ExtResource( 27 )

[node name="E" type="Button" parent="."]
margin_left = 221.0
margin_top = 942.854
margin_right = 316.0
margin_bottom = 1272.85
theme = ExtResource( 1 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 30 )
attenuation = 0.707107

[node name="Player2" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 28 )
attenuation = 0.707107

[node name="Player3" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 33 )
attenuation = 0.707107

[node name="Player4" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 10 )
attenuation = 0.707107

[node name="Player5" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 31 )
attenuation = 0.707107

[node name="Player6" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 29 )
attenuation = 0.707107

[node name="Player7" type="AudioStreamPlayer2D" parent="E"]
position = Vector2( -158.656, 0 )
stream = ExtResource( 32 )
attenuation = 0.707107

[node name="F" type="Button" parent="."]
margin_left = 316.0
margin_top = 942.854
margin_right = 411.0
margin_bottom = 1272.85
theme = ExtResource( 1 )
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 34 )

[node name="Player2" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 36 )

[node name="Player3" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 35 )

[node name="Player4" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 8 )

[node name="Player5" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 37 )

[node name="Player6" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 38 )

[node name="Player7" type="AudioStreamPlayer2D" parent="F"]
position = Vector2( -237.656, 0 )
stream = ExtResource( 39 )

[node name="G" type="Button" parent="."]
margin_left = 411.0
margin_top = 944.158
margin_right = 506.0
margin_bottom = 1273.16
theme = ExtResource( 1 )
text = "G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 40 )

[node name="Player2" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 41 )

[node name="Player3" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 42 )

[node name="Player4" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 9 )

[node name="Player5" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 43 )

[node name="Player6" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 44 )

[node name="Player7" type="AudioStreamPlayer2D" parent="G"]
position = Vector2( -316.801, -0.157959 )
stream = ExtResource( 45 )

[node name="A" type="Button" parent="."]
margin_left = 506.0
margin_top = 944.158
margin_right = 601.0
margin_bottom = 1273.16
theme = ExtResource( 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player0" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 47 )

[node name="Player1" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 46 )

[node name="Player2" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 48 )

[node name="Player3" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 49 )

[node name="Player4" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 4 )

[node name="Player5" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 50 )

[node name="Player6" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 51 )

[node name="Player7" type="AudioStreamPlayer2D" parent="A"]
position = Vector2( -395.801, -0.157959 )
stream = ExtResource( 52 )

[node name="B" type="Button" parent="."]
margin_left = 601.0
margin_top = 944.158
margin_right = 696.0
margin_bottom = 1273.16
theme = ExtResource( 1 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player0" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 53 )

[node name="Player1" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 59 )

[node name="Player2" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 54 )

[node name="Player3" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 55 )

[node name="Player4" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 5 )

[node name="Player5" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 58 )

[node name="Player6" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 56 )

[node name="Player7" type="AudioStreamPlayer2D" parent="B"]
position = Vector2( -474.801, -0.157959 )
stream = ExtResource( 57 )

[node name="Db" type="Button" parent="."]
margin_left = 90.0
margin_top = 943.0
margin_right = 157.0
margin_bottom = 1145.0
theme = ExtResource( 2 )
text = "Db"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player0" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 61 )

[node name="Player1" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 64 )

[node name="Player2" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 63 )

[node name="Player3" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 65 )

[node name="Player4" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 13 )

[node name="Player5" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 66 )

[node name="Player6" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 60 )

[node name="Player7" type="AudioStreamPlayer2D" parent="Db"]
position = Vector2( -55.6555, 0 )
stream = ExtResource( 62 )

[node name="Eb" type="Button" parent="."]
margin_left = 189.0
margin_top = 943.0
margin_right = 256.0
margin_bottom = 1145.0
theme = ExtResource( 2 )
text = "Eb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 72 )

[node name="Player2" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 69 )

[node name="Player3" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 70 )

[node name="Player4" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 14 )

[node name="Player5" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 67 )

[node name="Player6" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 68 )

[node name="Player7" type="AudioStreamPlayer2D" parent="Eb"]
position = Vector2( -132.644, -0.157959 )
stream = ExtResource( 71 )

[node name="Gb" type="Button" parent="."]
margin_left = 377.0
margin_top = 943.0
margin_right = 444.0
margin_bottom = 1145.0
theme = ExtResource( 2 )
text = "Gb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 77 )

[node name="Player2" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 76 )

[node name="Player3" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 75 )

[node name="Player4" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 11 )

[node name="Player5" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 78 )

[node name="Player6" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 74 )

[node name="Player7" type="AudioStreamPlayer2D" parent="Gb"]
position = Vector2( -291.96, 0 )
stream = ExtResource( 73 )

[node name="Ab" type="Button" parent="."]
margin_left = 473.0
margin_top = 943.0
margin_right = 540.0
margin_bottom = 1145.0
theme = ExtResource( 2 )
text = "Ab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 83 )
attenuation = 0.225313

[node name="Player2" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 80 )
attenuation = 0.225313

[node name="Player3" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 84 )
attenuation = 0.225313

[node name="Player4" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 12 )
attenuation = 0.225313

[node name="Player5" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 82 )
attenuation = 0.225313

[node name="Player6" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 79 )
attenuation = 0.225313

[node name="Player7" type="AudioStreamPlayer2D" parent="Ab"]
position = Vector2( -370.011, -0.157959 )
stream = ExtResource( 81 )
attenuation = 0.225313

[node name="Bb" type="Button" parent="."]
margin_left = 567.0
margin_top = 943.0
margin_right = 634.0
margin_bottom = 1145.0
theme = ExtResource( 2 )
text = "Bb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player0" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 61 )
attenuation = 0.143587

[node name="Player1" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 64 )
attenuation = 0.143587

[node name="Player2" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 63 )
attenuation = 0.143587

[node name="Player3" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 65 )
attenuation = 0.143587

[node name="Player4" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 15 )
attenuation = 0.143587

[node name="Player5" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 66 )
attenuation = 0.143587

[node name="Player6" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 60 )
attenuation = 0.143587

[node name="Player7" type="AudioStreamPlayer2D" parent="Bb"]
position = Vector2( -449.178, -0.157959 )
stream = ExtResource( 62 )
attenuation = 0.143587

[connection signal="button_down" from="C" to="." method="_on_C_button_down"]
[connection signal="button_down" from="D" to="." method="_on_D_button_down"]
[connection signal="button_down" from="E" to="." method="_on_E_button_down"]
[connection signal="button_down" from="F" to="." method="_on_F_button_down"]
[connection signal="button_down" from="G" to="." method="_on_G_button_down"]
[connection signal="button_down" from="A" to="." method="_on_A_button_down"]
[connection signal="button_down" from="B" to="." method="_on_B_button_down"]
[connection signal="button_down" from="Db" to="." method="_on_Db_button_down"]
[connection signal="button_down" from="Eb" to="." method="_on_Eb_button_down"]
[connection signal="button_down" from="Gb" to="." method="_on_Gb_button_down"]
[connection signal="button_down" from="Ab" to="." method="_on_Ab_button_down"]
[connection signal="button_down" from="Bb" to="." method="_on_Bb_button_down"]
